<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>de.erethon</groupId>
    <artifactId>headlib-parent</artifactId>
    <version>3.0.8</version>
    <packaging>pom</packaging>
    <name>HeadLib</name>
    <url>https://dre2n.github.io</url>
    <description>A library for custom heads.</description>
    <modules>
        <module>core</module>
        <module>craftbukkit_1_18_R1</module>
        <module>craftbukkit_1_17_R1</module>
        <module>craftbukkit_1_16_R3</module>
        <module>craftbukkit_1_16_R2</module>
        <module>craftbukkit_1_16_R1</module>
        <module>craftbukkit_1_15_R1</module>
        <module>craftbukkit_1_14_R1</module>
        <module>craftbukkit_1_13_R2</module>
        <module>craftbukkit_1_13_R1</module>
        <module>craftbukkit_1_12_R1</module>
        <module>craftbukkit_1_11_R1</module>
        <module>craftbukkit_1_10_R1</module>
        <module>craftbukkit_1_9_R2</module>
        <module>craftbukkit_1_9_R1</module>
        <module>craftbukkit_1_8_R3</module>
        <module>craftbukkit_1_8_R2</module>
        <module>craftbukkit_1_8_R1</module>
        <module>dist</module>
        <module>plugin</module>
    </modules>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
    </properties>
    <repositories>
        <repository>
            <id>dre-repo</id>
            <url>https://erethon.de/repo</url>
        </repository>
    </repositories>
</project>
